--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "react-battle",
   "version": "1.0.0",
-  "main": "webpack.config.js",
+  "main": "index.js",
+  "keywords": [],
+  "author": "mohamedkbx",
+  "description": "",
+  "license": "ISC",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
